# otel-blob-tracer-sdk

./: pyproject.toml
src/oai_sdk_chainlit/: agents.py  app.py
src/otel_blob_tracer_sdk/: __init__.py  exporter.py  tracer.py
