[project]
name = "otel-blob-tracer-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GP", email = "gurpreet.singh@microsoft.com" }
]
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.24.0",
    "azure-storage-blob>=12.26.0",
    "beautifulsoup4>=4.13.5",
    "chainlit>=2.7.2",
    "langchain>=0.3.27",
    "openai>=1.102.0",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "requests>=2.32.5",
]

[project.scripts]
otel-blob-tracer-sdk = "otel_blob_tracer_sdk:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
